crates/service/tests/completion/snapshots/features__completion__field__after_typeidx.snap
---
source: crates/service/tests/completion/field.rs
expression: response
---
[
  {
    "label": "$x",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 5
  },
  {
    "label": "$y",
    "labelDetails": {
      "description": "(mut (ref 0))"
    },
    "kind": 5
  },
  {
    "label": "2",
    "labelDetails": {
      "description": "f32"
    },
    "kind": 5
  },
  {
    "label": "3",
    "labelDetails": {
      "description": "f64"
    },
    "kind": 5
  },
  {
    "label": "unreachable",
    "kind": 24
  },
  {
    "label": "nop",
    "kind": 24
  },
  {
    "label": "block",
    "kind": 24
  },
  {
    "label": "loop",
    "kind": 24
  },
  {
    "label": "if",
    "kind": 24
  },
  {
    "label": "else",
    "kind": 24
  },
  {
    "label": "throw",
    "kind": 24
  },
  {
    "label": "throw_ref",
    "kind": 24
  },
  {
    "label": "end",
    "kind": 24
  },
  {
    "label": "br",
    "kind": 24
  },
  {
    "label": "br_if",
    "kind": 24
  },
  {
    "label": "br_table",
    "kind": 24
  },
  {
    "label": "return",
    "kind": 24
  },
  {
    "label": "call",
    "kind": 24
  },
  {
    "label": "call_indirect",
    "kind": 24
  },
  {
    "label": "return_call",
    "kind": 24
  },
  {
    "label": "return_call_indirect",
    "kind": 24
  },
  {
    "label": "call_ref",
    "kind": 24
  },
  {
    "label": "return_call_ref",
    "kind": 24
  },
  {
    "label": "drop",
    "kind": 24
  },
  {
    "label": "select",
    "kind": 24
  },
  {
    "label": "try_table",
    "kind": 24
  },
  {
    "label": "local",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "global",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "table",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i32",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "sortText": "0",
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i64",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "f32",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "f64",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "memory",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "ref",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "br_on_null",
    "kind": 24
  },
  {
    "label": "br_on_non_null",
    "kind": 24
  },
  {
    "label": "cont",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "suspend",
    "kind": 24
  },
  {
    "label": "resume",
    "kind": 24
  },
  {
    "label": "resume_throw",
    "kind": 24
  },
  {
    "label": "resume_throw_ref",
    "kind": 24
  },
  {
    "label": "switch",
    "kind": 24
  },
  {
    "label": "struct",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "array",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "br_on_cast",
    "kind": 24
  },
  {
    "label": "br_on_cast_fail",
    "kind": 24
  },
  {
    "label": "any",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "extern",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i31",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "data",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "elem",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "v128",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i8x16",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i16x8",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i32x4",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "i64x2",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "f32x4",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "f64x2",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  },
  {
    "label": "atomic",
    "labelDetails": {
      "detail": "."
    },
    "kind": 24,
    "commitCharacters": [
      "."
    ]
  }
]
